# signalflow

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.mkg.prod.yml  docker-compose.mkg.yml  docker-compose.prod.yml  docker-compose.yml  railway.toml  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  supervisord.conf
backend/app/: auth.py  config.py  database.py  main.py  rate_limit.py
backend/app/api/: admin.py  ai_qa.py  alerts.py  auth_routes.py  (+14 more)
backend/migrations/: env.py
backend/scripts/: backup.sh  seed.py  seed_demo_signals.py
backend/tests/: conftest.py  test_ai_budget.py  test_ai_engine.py  test_alert_tasks.py  test_api_ai_qa.py  test_api_alerts.py  test_api_backtest.py  test_api_health.py  test_api_history.py  test_api_integration.py  test_api_markets.py  test_api_portfolio.py  test_api_price_alerts.py  test_api_sharing.py  test_api_signal_feedback.py  test_api_signals.py  test_api_versioning.py  test_auth_endpoints.py  test_auth_revocation_failsafe.py  test_backend_improvements.py  test_breaker_api.py  test_breaker_formatter.py  test_breaker_pipeline.py  test_breaker_scoring.py  test_breaker_security.py  test_brute_force.py  test_chaos_fault_injection.py  test_circuit_breaker.py  test_cmdi_deep.py  test_concurrency_races.py  test_config.py  test_cors_validation.py  test_cost_tracker.py  test_database.py  test_dispatcher.py  test_e2e_security_flows.py  test_earnings_calendar.py  test_error_leakage.py  test_feedback_loop.py  test_formatter.py  (+83 more)
(+594 files in other folders)
